refactor: stlyle - upgrade: business logic